kubernetes/legacy/local/assets/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: assets-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: assets.gw2treasures.kubernetes.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: assets
            port:
              name: http
